updates on schema and api;

--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,4 @@
 DATABASE_URL='mysql://rw8a3aew29mn:pscale_pw_nNCHXIiv7uqwtaDlp88uTzjYzYV9TCpYyfKI0uLXnLg@9pj7dblx0ja6.us-east-4.psdb.cloud/joberry?sslaccept=strict'
-AUTH0_JWK_URI="https://neu.us.auth0.com/.well-known/jwks.json"
-AUTH0_AUDIENCE="https://api.todos"
-AUTH0_ISSUER="https://neu.us.auth0.com/"
+AUTH0_JWK_URI = "https://joberry.us.auth0.com/.well-known/jwks.json";
+AUTH0_AUDIENCE=""
+AUTH0_ISSUER = "https://joberry.us.auth0.com/";
