--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "jest-watch-typeahead": "^0.2.1",
     "less": "^4.1.2",
     "less-loader": "^5.0.0",
+    "less-plugin-glob": "^3.0.0",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
