--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.10.0",
     "@babel/core": "7.2.2",
     "@svgr/webpack": "4.1.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -37,7 +38,6 @@
     "jest-watch-typeahead": "^0.2.1",
     "less": "^4.1.2",
     "less-loader": "^5.0.0",
-    "less-plugin-glob": "^3.0.0",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
@@ -49,6 +49,7 @@
     "react-app-polyfill": "^0.2.2",
     "react-dev-utils": "^8.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
