--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.5",
+    "babel-plugin-import": "^1.13.5",
     "babel-plugin-named-asset-import": "^0.3.1",
     "babel-preset-react-app": "^7.0.2",
     "bfj": "6.1.1",
@@ -38,7 +39,10 @@
     "jest-watch-typeahead": "^0.2.1",
     "less": "^4.1.2",
     "less-loader": "^5.0.0",
+    "less-plugin-glob": "^3.0.0",
     "mini-css-extract-plugin": "0.5.0",
+    "mobx": "^6.5.0",
+    "mobx-react": "^7.3.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
