updates on api;

--- a/api/.env
+++ b/api/.env
@@ -1,7 +1,7 @@
 DATABASE_URL='mysql://zy9o6ycpb62d:pscale_pw_PUHCrERBlQpMW4iZrUR6kbiy20Lko5OmGq-S6UXF3zI@9pj7dblx0ja6.us-east-4.psdb.cloud/joberry?sslaccept=strict'
-AUTH0_JWK_URI = "https://joberry.us.auth0.com/.well-known/jwks.json";
-AUTH0_AUDIENCE = "https://api.posts";
-AUTH0_ISSUER = "https://joberry.us.auth0.com/";
+AUTH0_JWK_URI = "https://joberry.us.auth0.com/.well-known/jwks.json"
+AUTH0_AUDIENCE = "https://api.joberry"
+AUTH0_ISSUER = "https://joberry.us.auth0.com/"
 
 
 
