--- a/api/package.json
+++ b/api/package.json
@@ -21,11 +21,12 @@
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.3",
-    "morgan": "^1.10.0",
+    "express-async-handler": "^1.2.0",
     "express-jwt": "^6.1.1",
     "express-jwt-authz": "^2.4.1",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.5",
-    "jwt-decode": "^3.1.2"
+    "jwt-decode": "^3.1.2",
+    "morgan": "^1.10.0"
   }
 }
