--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@auth0/auth0-react": "^1.10.0",
     "@babel/core": "7.2.2",
     "@svgr/webpack": "4.1.0",
